# flexdb

./: LICENSE  flexdb.cabal
examples/: Main.hs
exe/: Config.hs  Generate.hs
fclabels/: fclabels.cabal
src/DB/: Flex.hs
src/DB/Flex/: Config.hs  Create.hs  Generate.hs  Monad.hs  Query.hs  Record.hs  Table.hs
src/DB/Flex/Query/: Ancestry.hs  Base.hs  Core.hs  Derived.hs  Ontology.hs  Typed.hs  View.hs
src/Data/: Foldable1.hs  Functor1.hs  Traversable1.hs  Zippable1.hs
src/Data/Label/: Util.hs
src/Data/Record/: Abstract.hs  Labels.hs
src/Language/Haskell/TH/: Util.hs
