Name:                flexdb
Version:             0.1
Synopsis:            A simple functional relational mapper.
Description:         A simple functional relational mapper.
License:             BSD3
License-file:        LICENSE
Author:              Bram Schuur
Maintainer:          bram@typlab.com
Category:            Debug
Build-type:          Simple
Cabal-version:       >=1.6

Library
  exposed-modules:    Data.Label.Util
                      Data.Record.Abstract
                      Data.Foldable1
                      Data.Functor1
                      Data.Traversable1
                      Data.Zippable1
                      
                      DB.Flex
                      DB.Flex.Config
                      DB.Flex.Create
                      DB.Flex.Monad
                      DB.Flex.Query
                      DB.Flex.Query.Ancestry
                      DB.Flex.Query.Ontology
                      DB.Flex.Query.Typed
                      DB.Flex.Query.View
                      DB.Flex.Record
                      
                      Language.Haskell.TH.Util

  other-modules:     DB.Flex.Query.Base
  
  build-depends:       base >= 3 && <= 5
                     , containers
                     , convertible == 1.0.*
                     , fclabels
                     , ghc-prim
                     , HDBC
                     , HDBC-postgresql
                     , hslogger
                     , mtl
                     , monad-control 
                     , safe == 0.3.*
                     , syb ==0.3.*
                     , tagged 
                     , template-haskell
                     , time
                     , uuid
                     , transformers-base == 0.4.*
                     
  hs-source-dirs:      src
  ghc-options          : -Wall