Name:                flexdb
Version:             0.1
Synopsis:            A functional relational mapper.
Description:         A functional relational mapper.
License:             BSD3
License-file:        LICENSE
Author:              Bram Schuur
Maintainer:          bram@typlab.com
Category:            Debug
Build-type:          Simple
Cabal-version:       >=1.8

Library
  exposed-modules:    Data.Label.Util
                      Data.Record.Abstract
                      Data.Foldable1
                      Data.Functor1
                      Data.Traversable1
                      Data.Zippable1
                      
                      DB.Flex
                      DB.Flex.Create
                      DB.Flex.Generate
                      DB.Flex.Monad
                      DB.Flex.Query
                      DB.Flex.Query.Ancestry
                      DB.Flex.Query.Ontology
                      DB.Flex.Query.Typed
                      DB.Flex.Query.View
                      DB.Flex.Record
                      DB.Flex.Table
                      
                      Language.Haskell.TH.Util

  other-modules:     DB.Flex.Query.Base
                     DB.Flex.Query.Core
  
  build-depends:       base >= 3 && <= 5
                     , containers
                     , convertible >= 1.0
                     , fclabels == 2.0.2.100
                     , filepath == 1.3.*
                     , ghc-prim
                     , HDBC == 2.4.*
                     , mtl 
                     , safe == 0.3.*
                     , split == 0.2.*
                     , tagged 
                     , template-haskell
                     , time
                     , uuid
                     
  hs-source-dirs:      src
  ghc-options          : -Wall
